# RApi1

./: .env.example  .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
.ai/: promote.md
crates/audio_1/: Cargo.toml
crates/bevy/: Cargo.toml
crates/bevy_1/: Cargo.toml
crates/bevy_1/src/: examples.rs  first.rs  lib.rs  main.rs  mesh_picking.rs  utils.rs
crates/bevy_1/src/examples/: first.rs  mesh_picking.rs  terrain.rs  volumetric_fog.rs
crates/bevy_1/src/examples/first/: bevy_vector_shapes.rs  gamepad.rs  hello.rs  muti_move.rs  muti_move_2d.rs  my_move.rs  three_d_1.rs
crates/bevy_1/src/examples/terrain/: avian_1.rs
crates/bevy_1/src/examples/two_d/: shapes.rs
crates/bevy_1/src/utils/: tow_d_draw.rs
crates/dioxus_1/: Cargo.toml
crates/my_bin_1/: Cargo.toml
crates/my_bin_1/src/: main.rs
crates/my_lib_1/: Cargo.toml
crates/my_lib_1/src/: action.rs  ax.rs  lib.rs  study_1.rs
crates/my_lib_1/src/action/: crawl_x.rs
crates/my_lib_1/src/action/crawl_x/: check.sql  crawl_1.rs  to_db.rs
crates/my_lib_1/src/ax/: ax1.rs
crates/my_lib_1/src/axum_first/: mod.rs
crates/my_lib_1/src/study_1/: fn_methods.rs  mod.rs  option.rs  test_study.rs
crates/my_lib_1/src/study_1/test_study/: unit_1.rs
crates/my_lib_1/src/study_trait/: mod.rs
crates/my_lib_1/src/utils/: crawl.rs  password.rs
crates/pingora_proxy/: Cargo.toml
crates/pingora_proxy/src/: lib.rs  main.rs  proxy_1.rs
crates/pingora_proxy/tests/: integration_test.rs
crates/wasm/: Cargo.toml  index.html
crates/wasm_1/: Cargo.toml  index.html
crates/wasm_1/src/: canvas_1.rs  lib.rs
src/: lib.rs  main.rs
src/axum_first/: mod.rs
