[workspace]
members = ["crates/*", ]
default-members = ["crates/my_bin_1"]
resolver = "2"

[workspace.package]
rust-version = "1.90.0"
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
my_lib_1 = { path = "crates/my_lib_1" }
pingora_proxy = { path = "crates/pingora_proxy" }
audio_1 = { path = "crates/audio_1" }
