[package]
name = "bevy_1"
rust-version.workspace = true
version.workspace = true
edition.workspace = true


[[bin]]
name = "bevy_1"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.

[dependencies]
bevy = { version = "0.17.2", features = ["wayland"] }
bevy_vector_shapes = "0.11.0"
