[package]
name = "bevy_1"
rust-version.workspace = true
version.workspace = true
edition.workspace = true


[[bin]]
name = "bevy_1"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.

[dependencies]
bevy = { version = "0.17.3", features = ["wayland", "bevy_sprite_render",
    "bevy_winit", "bevy_pbr",
    "default", "bevy_render", "bevy_ui", "bevy_ui_debug", "bevy_ui_render"] }

avian3d = "0.4.1"
bevy_vector_shapes = "0.11.0"
rand = "0.10.0-rc.5"
