[package]
name = "pingora_proxy"
version.workspace = true
edition = "2024"

[dependencies]
pingora = { version = "0.6.0", features = ["lb"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
hyper = { version = "0.14", features = ["server", "http1"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[[bin]]
name = "pingora_proxy"
path = "src/main.rs"

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }