[package]
name = "wasm"
rust-version.workspace = true
version.workspace = true
edition.workspace = true


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3", features = ["Window", "Document",
    "HtmlCanvasElement", "CanvasRenderingContext2d"] }